Collapsing Categories Changelog
* 1.0.beta (2009.06.08)
    * Added option to show post date

* 1.0.alpha (2009.05.17)
    * Widget is compatible with wordpress 2.8 (not backwards compatible with 2.7
      and previous). If you are using wordpress 2.7.1 or previous, please use
      collapsing archives version 1.1.4 or earlier
    * Now includes several default styling templates
    * Changed hide and show classed to collapse and expand to avoid CSS class
    * Can now add parameters to the collapscat function if you choose not to use
      the widget (see options section below)

* 1.0.alpha (2009.05.01)
    * Compatible with wordpress 2.8 widget api (incompatible with 2.7.1 and
      earlier)
    * Can now add options manually when using manually instead of widget
    * When using tags, link now points to correct location

* 0.9.8 (2009.04.17)
    * Fixed triangle problem

* 0.9.7 (2009.04.16)
    * fixed a few bugs introduced in 0.9.6

* 0.9.6 (2009.04.15)
    * Added option to group posts into misc category
    * Switched role handling to proper API use (to control whether or not the
      settings page shows up)
    * Added option for custom symbols
    * No longer requires footer
    * Updated javascript file
    * Cleaned up code a bunch

* 0.9.5 (2009.03.22)
    * Fixed some more settings panel issues
    * Truncate post title now working for posts in sub-categories
    * Works even faster now for blogs with many posts
    * Fixed option to show only tags
    * Fixed previews for style settings
    * Categories which do not have any posts due to date exclusion no longer
      show up
    * Restored compatibility with my category order plugin (thanks Jtbarret)
    * Better internationalization support

* 0.9.4 (2009.03.09)
    * Fixed issue with multiple instances

* 0.9.3 (2009.03.08)
    * Fixed links to sub-categories

* 0.9.2 (2009.03.07)
    * Tweaked default style
    * Fixed bug when not using permalinks

* 0.9.1 (2009.03.02)